force-app/main/default/objects/tkt_Email_Settings__mdt/tkt_Email_Settings__mdt.object-meta.xml
<CustomObject>
    <description>TNOX: Organization-wide settings for ticket email notifications including company branding, support contact information, and email footer content.</description>
    <label>Ticket Email Settings</label>
    <pluralLabel>Ticket Email Settings</pluralLabel>
</CustomObject>