force-app/main/default/objects/tkt_Email_Settings__mdt/fields/Company_Website__c.field-meta.xml
<CustomField>
    <fullName>Company_Website__c</fullName>
    <description>TNOX: Company or support portal website URL</description>
    <inlineHelpText>e.g., https://support.yourcompany.com</inlineHelpText>
    <label>Company Website</label>
    <type>Url</type>
</CustomField>