force-app/main/default/objects/tkt_Email_Settings__mdt/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>TNOX: General support email address displayed in email footers</description>
    <inlineHelpText>e.g., support@yourcompany.com</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>