force-app/main/default/objects/tkt_Email_Settings__mdt/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>TNOX: General support phone number displayed in email footers</description>
    <inlineHelpText>e.g., +1 (555) 123-4567</inlineHelpText>
    <label>Contact Phone</label>
    <type>Phone</type>
</CustomField>