force-app/main/default/objects/tkt_Email_Settings__mdt/fields/Footer_Message__c.field-meta.xml
<CustomField>
    <fullName>Footer_Message__c</fullName>
    <description>TNOX: Optional custom message to include in the email footer</description>
    <inlineHelpText>e.g., &quot;We&apos;re here to help Monday-Friday, 9am-5pm EST&quot;</inlineHelpText>
    <label>Footer Message</label>
    <type>TextArea</type>
</CustomField>