force-app/main/default/objects/tkt_Email_Settings__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>TNOX: Only one active record should exist. The active record is used for email settings.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>