force-app/main/default/objects/tkt_Email_Settings__mdt/fields/Support_Team_Name__c.field-meta.xml
<CustomField>
    <fullName>Support_Team_Name__c</fullName>
    <description>TNOX: Name of your support team or company that appears in email headers and footers</description>
    <inlineHelpText>e.g., &quot;Acme Support Team&quot; or &quot;Customer Success Team&quot;</inlineHelpText>
    <label>Support Team Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>